--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
     "axios-extensions": "^3.1.6",
+    "query": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
